mendambahkan latihan table

--- a/Table/latihan2.html
+++ b/Table/latihan2.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <nav>
-        <a href="../main.html">Main Menu</a>
+        <a href="../main.html">Main Menu</a> |
+        <a href="table.html"> Example Table</a> |
+        <a href="tablewaktu.html">Latihan Table</a>
     </nav>
-    <h1>Informasi Restorant</h1>
+    <h1>Informasi Mengenai Table</h1>
     <hr>
     <table border="1">
         <tr>
@@ -26,6 +28,31 @@
             <td>salad ceasar</td>
             <td>400</td>
             <td>26</td>
+        </tr>
+    </table>
+    <hr>
+    <p>Table mengabungkan Coloms  (colspan)</p>
+    <table border="1">
+        <tr>
+            <th colspan="2">Fat</th>
+        </tr>
+        <tr>
+            <td>Saturated Fat (g)</td>
+            <td>Unsaturated Fat (g)</td>
+        </tr>
+    </table>
+    <hr>
+    <p>Table menggabungkan Rows (rowspan)</p>
+    <table border="1">
+        <tr>
+            <th rowspan="3">Serving Size</th>
+            <td>Small (80oz)</td>
+        </tr>
+        <tr>
+            <td>Medium (160z)</td>
+        </tr>
+        <tr>
+            <td>Larger (24oz)</td>
         </tr>
     </table>
 </body>
