--- a/Table/table.html
+++ b/Table/table.html
@@ -6,6 +6,22 @@
     <title>Latiham Membuat Table</title>
 </head>
     <body>
-        
+        <nav><a href="latihan2.html">back</a></nav>
+        <h1>TABLE MAKER</h1>
+        <h3>Ini adalah Contoh konsep Table: <a href="latihan2.html">| Table Example |</a></h3>
+        <p>
+            tabel mempunyai beberapa tag penting yang perlu di ingat <br>
+            misalnya: <br><br>
+            &lt;th&gt; singkatan dari Table Head <br>
+            &lt;tr&gt; singkatan dari Table Rows <br>
+            &lt;td&gt; singkatan dari Table Data <br> <br>
+            pada table juga ada atribut penting yang sering di gunakan seperti <br>
+            <ol>
+                <li>Border</li>
+                <li>Rowspan</li>
+                <li>colspan</li>
+            </ol>
+        </p>
+        <nav></nav> 
     </body>
 </html>
