mengerjakan tugas table 2

--- a/Table/tablewaktu.html
+++ b/Table/tablewaktu.html
@@ -10,7 +10,7 @@
         <a href="latihan2.html">Back</a>
     </nav>
     <hr>
-    <p>Latihan Mengerjakan table jadwal harian</p>
+    <p>Latihan Mengerjakan table jadwal harian di <strong>Universitas Cuy Hebat</strong></p>
     <table border="1" style="text-align: center;">
         <tr>
             <th colspan="6">Time Table</th>
@@ -52,6 +52,120 @@
             <td>sejarah</td>
             <td>bahasa inggris</td>
             <td>sosial</td>
+        </tr>
+    </table>
+    <hr>
+    <p>Table jadwal Seminar untuk 3 hari kedepan di <strong>Universitas Cuy Hebat</strong></p>
+    <table border="1" style="text-align: center;">
+        <tr>
+            <th rowspan="3" colspan="1">DAY</th>
+            <th colspan="6">Seminar</th>
+        </tr>
+        <tr>
+            <td colspan="2">Schedule</td>
+            <td rowspan="2" colspan="2">Tople</td>
+        </tr> 
+        <tr>
+            <td>Begin</td>
+            <td>End</td>
+        </tr>
+        <tr>
+            <td rowspan="2">Monday</td>
+            <td rowspan="2">8.00</td>
+            <td rowspan="2">5.00</td>
+            <td>Introduction to XML</td>
+        </tr>
+        <tr>
+            <td>Validity:DTD and Relax NG</td>
+        </tr>
+        <tr>
+            <td rowspan="3">Tuesday</td>
+            <td>8.00</td>
+            <td>11.00</td>
+            <td>xPath</td>
+        </tr>
+        <tr>
+            <td>11.00</td>
+            <td>2.00</td>
+            <td rowspan="2">XSL Transformations</td>
+        </tr>
+        <tr>
+            <td>2.00</td>
+            <td>5.00</td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td>8.00</td>
+            <td>12.00</td>
+            <td>XSL Formating Objects</td>
+        </tr>
+    </table>
+    <hr>
+    <p>Table jadwal ujian mahasiswa <strong>Universitas Cuy Hebat</strong></p>
+    <table border="1">
+        <tr>
+        <th rowspan="2" colspan="2">Student</th>
+        <th colspan="4">Exam</th>
+        <th colspan="4">2nd Exam</th>
+        <th rowspan="2" colspan="7">Final Grade</th>
+        </tr>
+        <tr>
+            <td>Q1</td>
+            <td>Q2</td>
+            <td>Q3</td>
+            <td rowspan="2">Grade</td>
+            <td>Q1</td>
+            <td>Q2</td>
+            <td>Q3</td>
+            <td rowspan="2">Grade</td>
+        </tr>
+        <tr>
+            <th>Code</th>
+            <th>Name</th>
+            <td>8</td>
+            <td>7</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+            <td>7</td>
+            <th>Student Avg</th>
+            <th>Class Avg</th>
+        </tr>
+        <tr>
+            <td>8023427</td>
+            <td>John</td>
+            <td>70%</td>
+            <td>100%</td>
+            <td>100%</td>
+            <td>17.6</td>
+            <td colspan="4"></td>
+            <td>17.6</td>
+            <td>18</td>
+        </tr>
+        <tr>
+            <td>8023427</td>
+            <td>John</td>
+            <td>70%</td>
+            <td>100%</td>
+            <td>100%</td>
+            <td>17.6</td>
+            <td>100%</td>
+            <td>100%</td>
+            <td>50%</td>
+            <td>16.5</td>
+            <td>16.5</td>
+            <td>17</td>
+        </tr>
+        <tr>
+            <td>8037434</td>
+            <td>Mickey</td>
+            <td colspan="4"</td>
+            <td>50%</td>
+            <td>50%</td>
+            <td>50%</td>
+            <td>10.0</td>
+            <td>10.0</td>
+            <td>10</td>
         </tr>
     </table>
 </body>
