mengubah beberapa font jadi bold

--- a/Table/tablewaktu.html
+++ b/Table/tablewaktu.html
@@ -110,14 +110,14 @@
         <th rowspan="2" colspan="7">Final Grade</th>
         </tr>
         <tr>
-            <td>Q1</td>
-            <td>Q2</td>
-            <td>Q3</td>
-            <td rowspan="2">Grade</td>
-            <td>Q1</td>
-            <td>Q2</td>
-            <td>Q3</td>
-            <td rowspan="2">Grade</td>
+            <th>Q1</th>
+            <th>Q2</th>
+            <th>Q3</th>
+            <th rowspan="2">Grade</th>
+            <th>Q1</th>
+            <th>Q2</th>
+            <th>Q3</th>
+            <th rowspan="2">Grade</th>
         </tr>
         <tr>
             <th>Code</th>
