memuat bold beberapa text

--- a/Table/tablewaktu.html
+++ b/Table/tablewaktu.html
@@ -62,12 +62,12 @@
             <th colspan="6">Seminar</th>
         </tr>
         <tr>
-            <td colspan="2">Schedule</td>
-            <td rowspan="2" colspan="2">Tople</td>
+            <th colspan="2">Schedule</th>
+            <th rowspan="2" colspan="2">Tople</th>
         </tr> 
         <tr>
-            <td>Begin</td>
-            <td>End</td>
+            <th>Begin</th>
+            <th>End</th>
         </tr>
         <tr>
             <td rowspan="2">Monday</td>
