menambahkan code latihan membuat form

--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="Cooking/Basic/latihan1.html">Latihan Anchor link</a></li>
             <li><a href="Table/latihan2.html">Latihan Table</a></li>
+            <li><a href="form/form.html">Latihan Form</a></li>
         </ul>
     </nav>
 </body>
