menambah update baru yaitu form

--- a/form/form.html
+++ b/form/form.html
@@ -61,7 +61,7 @@
             <button type="submit" name="submit" id="submit">Submit Your Answer</button>
         </div>
         <div class="divider">
-            <a href="../main.html" class="back">Back</a>
+            <a href="latihan3.html" class="back">Back</a>
         </div>
     </form>
     <footer></footer>
