--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
     <hr>
     <nav>
         <ul>
-            <li><a href="Cooking/Basic/latihan1.html">Latihan Anchor link</a></li>
+            <li><a href="Cooking/resep/latihan1.html">Latihan Anchor link</a></li>
             <li><a href="Table/latihan2.html">Latihan Table</a></li>
-            <li><a href="form/form.html">Latihan Form</a></li>
+            <li><a href="form/latihan3.html">Latihan Form</a></li>
         </ul>
     </nav>
 </body>
