--- a/cssPractice/css-practice1.html
+++ b/cssPractice/css-practice1.html
@@ -7,7 +7,7 @@
   <title>Practice 1 - CSS</title>
 </head>
 <body>
-  <h1>Poetry Workshops</h1>
+  <h1 class="title">Poetry Workshops</h1>
 
   <p>We will be conducting a number of poetry workshops and symposiums throughout the year.</p>
   <p>Please note that the following events are free to members:</p>
@@ -25,7 +25,7 @@
       <th>Chicago</th>
       <th>San Francisco</th>
     </tr>
-    <tr>
+    <tr class="event">
       <th>A Poetic Perspective</th>
       <td>Sat, 4 Feb 2012<br>11am - 2pm</td>
       <td>Sat, 3 Mar 2012<br>11am - 2pm</td>
@@ -37,7 +37,7 @@
       <td>Sat, 5 May 2012<br>11am - 1pm</td>
       <td>Sat, 19 May 2012<br>11am - 1pm</td>
     </tr>
-    <tr>
+    <tr class="event">
       <th>Found Poems &amp; Outsider Poetry</th>
       <td>Sat, 9 Jun 2012<br>11am - 2pm</td>
       <td>Sat, 7 Jul 2012<br>11am - 2pm</td>
