menambah latihan  untuk css

--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
             <li><a href="Cooking/resep/latihan1.html">Latihan Anchor link</a></li>
             <li><a href="Table/latihan2.html">Latihan Table</a></li>
             <li><a href="form/latihan3.html">Latihan Form</a></li>
+            <li><a href="cssPractice/css-practice1.html">Latihan CSS</a></li>
         </ul>
     </nav>
 </body>
