--- a/cssPractice/css-practice1.html
+++ b/cssPractice/css-practice1.html
@@ -13,6 +13,7 @@
   <p>Please note that the following events are free to members:</p>
   
   <ul>
+    <a href="/main.html">Back To Home</a>
     <li>A Poetic Perspective</li>
     <li>Walt Whitman at War</li>
     <li>Found Poems and Outsider Poetry</li>
