menambahkan latihan grid sebanyak 3 folder dengan materi berbeda

--- a/main.html
+++ b/main.html
@@ -14,6 +14,9 @@
             <li><a href="Table/latihan2.html">Latihan Table</a></li>
             <li><a href="form/latihan3.html">Latihan Form</a></li>
             <li><a href="cssPractice/css-practice1.html">Latihan CSS</a></li>
+            <li><a href="gridLearning/index.html">Grid Learning</a></li>
+            <li><a href="gridMasons/index (1).html">Grid Masons</a></li>
+            <li><a href="gridMulti-column/index.html">Grid Multi Column</a></li>
         </ul>
     </nav>
 </body>
