--- a/gridMasons/index (1).html
+++ b/gridMasons/index (1).html
@@ -3,13 +3,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="masons.css">
   <title>Masonry Style Layout</title>
 </head>
 <body>
   <header>
     <nav>
-      <a href="/">Home</a> |
+      <a href="../main.html">Home</a> |
       <a href="/">Articles</a> |
       <a href="/main.html">Back To Main Menu</a>
       <h1>
