--- a/gridMulti-column/index.html
+++ b/gridMulti-column/index.html
@@ -3,12 +3,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="styles.css"> -->
+  <link rel="stylesheet" href="multigrid.css">
   <title>Multi-Column Blog Layout</title>
 </head>
 <body>
   <nav>
-    <li><a href="/main.html">Back To Main Menu</a></li>
+    <li><a href="../main.html">Back To Main Menu</a></li>
   </nav>
   <header>
     <h1>Globe Roamer</h1>
