memperbaiki beberapa achor link

--- a/Grid/index.html
+++ b/Grid/index.html
@@ -12,6 +12,7 @@
         <div id="header">
             <h1>Welcome to My Website</h1>
             <p>Learning CSS Grid Layout</p>
+            <p><a href="../main.html">Back To MainMenu</a></p>
         </div>
 
         <!-- Sidebar Section -->
