--- a/gridLearning/index.html
+++ b/gridLearning/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Three columns fixed layout">
+  <link rel="stylesheet" href="grid.css">
   <title>Three columns fixed layout - CSS Grid</title>
 </head>
 <body>
@@ -15,11 +16,10 @@
 
     <nav class="navigation-primary" aria-label="Primary">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="../main.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact us</a></li>
-        <li><a href="/main.html">Back To main Menu</a></li>
       </ul>
     </nav>
 
