--- a/FlexBox/index.html
+++ b/FlexBox/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Flexbox layout training page">
+    <link rel="stylesheet" href="flex.css">
     <title>FlexBox Training</title>
 </head>
 <body>
-    
+    <header class="header">
+        <h1>FlexBox Training</h1>
+        <p>Learn how to design layouts with CSS Flexbox</p>
+    </header>
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="../main.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Gallery</a></li>
+        </ul>
+    </nav>
+
+    <main class="main-content">
+        <section class="flex-container">
+            <div class="box box1">Box 1</div>
+            <div class="box box2">Box 2</div>
+            <div class="box box3">Box 3</div>
+            <div class="box box4">Box 4</div>
+            <div class="box box5">Box 5</div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <p>Copyright &copy; 2024 FlexBox Training | All Rights Reserved</p>
+    </footer>
 </body>
 </html>
