memperbaiki beberapa desain pada tiap folder

--- a/gridLearning/index.html
+++ b/gridLearning/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <header class="header-primary">
-      <h1>Site name</h1>
+      <h1>Grid Library Learning</h1>
     </header>
 
     <nav class="navigation-primary" aria-label="Primary">
